get rid of this spock test which generate some issues...
Signed-off-by: olivier lamy <olamy@apache.org>