@@ -33,7 +33,7 @@
     <findbugs.failOnError>false</findbugs.failOnError>
 
     <!-- tests -->
-    <groovy.version>2.4.5</groovy.version>
+    <groovy.version>2.4.15</groovy.version>
     <surefire.version>2.20</surefire.version>
     <configuration-as-code.version>1.36</configuration-as-code.version>
   </properties>
@@ -54,27 +54,6 @@
             </configuration>
           </plugin>
         </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>java11</id>
-      <activation>
-        <jdk>11</jdk>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <configuration>
-                <reuseForks>false</reuseForks>
-                <!--          <argLine>&#45;&#45;add-modules java.xml.bind</argLine>-->
-                <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --illegal-access=warn</argLine>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
       </build>
     </profile>
   </profiles>
@@ -358,12 +337,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>cglib</groupId>
-      <artifactId>cglib-nodep</artifactId>
-      <version>2.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
       <version>${mockito.version}</version>
@@ -390,8 +363,40 @@
     <dependency>
       <groupId>org.spockframework</groupId>
       <artifactId>spock-core</artifactId>
-      <version>1.1-groovy-2.4</version>
+      <version>1.3-groovy-2.4</version>
       <scope>test</scope>
+    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>net.bytebuddy</groupId>-->
+<!--      <artifactId>byte-buddy</artifactId>-->
+<!--      <version>1.9.16</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-nodep</artifactId>
+      <version>3.2.7</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>junit-dep</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.objenesis</groupId>
+      <artifactId>objenesis</artifactId>
+      <version>2.6</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>junit-dep</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.github.mifmif</groupId>
@@ -430,7 +435,7 @@
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
-        <version>2.4.12</version>
+        <version>${groovy.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
